--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -74,6 +74,10 @@
 			<array>
 				<string>public.data</string>
 			</array>
+			<key>UTTypeDescription</key>
+			<string>XPlanFile</string>
+			<key>UTTypeIconFiles</key>
+			<array/>
 			<key>UTTypeIdentifier</key>
 			<string>com.xclz-studio.xplaner</string>
 			<key>UTTypeTagSpecification</key>
@@ -92,25 +96,17 @@
 			<array>
 				<string>com.xclz-studio.xplaner</string>
 			</array>
+			<key>UTTypeDescription</key>
+			<string>XPlanFile</string>
+			<key>UTTypeIconFiles</key>
+			<array/>
 			<key>UTTypeIdentifier</key>
 			<string>com.xclz-studio.xplaner</string>
-			<key>UTTypeTagSpecification</key>
-			<dict/>
-		</dict>
-		<dict>
-			<key>UTTypeConformsTo</key>
-			<array>
-				<string>public.plain-text</string>
-			</array>
-			<key>UTTypeDescription</key>
-			<string>Example Text</string>
-			<key>UTTypeIdentifier</key>
-			<string>com.example.plain-text</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string>exampletext</string>
+					<string>xplaner</string>
 				</array>
 			</dict>
 		</dict>
